--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </title>
 </head>
 
-<body dir="rtl" v-cloak>
-    <div id="app">
+<body dir="rtl">
+    <div id="app" v-cloak>
 
         <app-toolbar></app-toolbar>
 
