--- a/questions/index.html
+++ b/questions/index.html
@@ -46,8 +46,8 @@
     </title>
 </head>
 
-<body dir="rtl" v-cloak>
-    <div id="app">
+<body dir="rtl">
+    <div id="app" v-cloak>
 
         <app-toolbar></app-toolbar>
 
