--- a/resources/index.html
+++ b/resources/index.html
@@ -11,10 +11,10 @@
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    
+
     <style>
         [v-cloak] {
-                display: none;
+            display: none;
         }
         
         * {
@@ -25,9 +25,24 @@
         .centered *{ 
             text-align: center
         }
+
+        pre, code{
+            direction: ltr;
+            text-align: left;   
+        }
+
+        pre {
+            border: solid 1px #aaa;
+            background-color: #eee;
+            border-radius: 10px;
+            padding: 10px;
+            width: min-content;
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
     </style>
 
-    <link rel="shortcut icon" type="image/png" href="./assets/images/vue-logo.png" />
+    <link rel="shortcut icon" type="image/png" href="../assets/images/vue-logo.png" />
 
     <title>
         مجتمع ڨيو العربي
@@ -42,17 +57,13 @@
         <div class="jumbotron jumbotron-fluid centered">
             <div class="container">
                 <h1 class="display-4">
-                    مرحبا بالعالم
+                    قسم مصادر التعلم
                 </h1>
-                <p class="lead">
-                    اهلا بكم في موقع مجتمع ڨيو العربي
-                </p>
             </div>
         </div>
 
-        <div class="container">
-            <app-sections></app-sections>
-        </div>
+        <app-resources></app-resources>
+
     </div>
 </body>
 
@@ -64,9 +75,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-<script src="./commonComponents/app-toolbar.js"></script>
+<script src="../commonComponents/app-toolbar.js"></script>
 
-<script src="./components/app-sections.js"></script>
+<script src="./components/app-resources.js"></script>
 
 <script>
     new Vue({
