--- a/scaling/index.html
+++ b/scaling/index.html
@@ -12,9 +12,9 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="./css/general.css">
+    <link rel="stylesheet" href="../css/general.css">
 
-    <link rel="shortcut icon" type="image/png" href="./assets/images/vue-logo.png" />
+    <link rel="shortcut icon" type="image/png" href="../assets/images/vue-logo.png" />
 
     <title>
         مجتمع ڨيو العربي
@@ -26,11 +26,9 @@
 
         <app-toolbar></app-toolbar>
 
-        <app-jumbotron title="مرحبا بالعالم" subtitle="اهلا بكم في موقع مجتمع ڨيو العربي"></app-jumbotron>
+        <app-jumbotron title="قسم التوسع في ڨيو"></app-jumbotron>
 
-        <div class="container">
-            <app-sections></app-sections>
-        </div>
+        <app-sections></app-sections>
     </div>
 </body>
 
@@ -42,8 +40,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-<script src="./commonComponents/app-toolbar.js"></script>
-<script src="./commonComponents/app-jumbotron.js"></script>
+<script src="../commonComponents/app-toolbar.js"></script>
+<script src="../commonComponents/app-jumbotron.js"></script>
 
 <script src="./components/app-sections.js"></script>
 
