Rename vue to be more consistent And prevent missing unicodes (linux)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" type="image/png" href="./assets/images/vue-logo.png" />
 
     <title>
-        مجتمع ڨيو العربي
+        مجتمع Vue العربي
     </title>
 </head>
 
@@ -26,7 +26,7 @@
 
         <app-toolbar></app-toolbar>
 
-        <app-jumbotron title="مرحبا بالعالم" subtitle="اهلا بكم في موقع مجتمع ڨيو العربي"></app-jumbotron>
+        <app-jumbotron title="مرحبا بالعالم" subtitle="اهلا بكم في موقع مجتمع Vue العربي"></app-jumbotron>
 
         <div class="container">
             <app-sections></app-sections>
