--- a/questions/index.html
+++ b/questions/index.html
@@ -36,7 +36,7 @@
     <link rel="shortcut icon" type="image/png" href="../assets/images/vue-logo.png" />
 
     <title>
-        مجتمع ڨيو العربي
+        مجتمع Vue العربي
     </title>
 </head>
 
