--- a/scaling/index.html
+++ b/scaling/index.html
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" type="image/png" href="../assets/images/vue-logo.png" />
 
     <title>
-        مجتمع ڨيو العربي
+        مجتمع Vue العربي
     </title>
 </head>
 
@@ -26,7 +26,7 @@
 
         <app-toolbar></app-toolbar>
 
-        <app-jumbotron title="قسم التوسع في ڨيو"></app-jumbotron>
+        <app-jumbotron title="قسم التوسع في Vue"></app-jumbotron>
 
         <app-sections></app-sections>
     </div>
